@@ -2,41 +2,34 @@
 classification = alignment
 
 [parameters]
-
-;;location of the reference Bowtie Index
-$;REFERENCE$;=$;REPOSITORY_ROOT$;/output_repository/bowtie_build/$;PIPELINEID$;_$;OUTPUT_TOKEN$;/reference
-
-;;location of the reads file
-$;Q$;= $;REPOSITORY_ROOT$;/output_repository/fastx_tools_analysis/$;PIPELINEID$;_$;OUTPUT_TOKEN$;_left/trimmed.fastq
-
-;;location of the reads mate file
-$;Q2$;= $;REPOSITORY_ROOT$;/output_repository/fastx_tools_analysis/$;PIPELINEID$;_$;OUTPUT_TOKEN$;_right/trimmed.fastq
-
+;; A single read or set of paired end reads seprated by a comma
+;;
+;; e.x. 
+;; UNPAIRED: /tmp/sequence.fastq
+;; PAIRED: /tmp/sequence_1.fastq,/tmp/sequence_2.fastq
+$;READS$; = 
 ;;maximum insert size
 $;X$;=300
-
 ;;maximum number of mismatches
 $;V$;=2
-
 ;;maximum number of alignments per read...those with more alignments will be ignored
 $;M$;=1
-
 ;;additional arguments
 $;OTHER_OPTS$;=
 
 [input]
+;; A directory, file list or single bowtie-build generated index should be provided below
 $;INPUT_FILE_LIST$; = 
 $;INPUT_FILE$; = 
 $;INPUT_DIRECTORY$; = 
 ;; the following is only used when iterating over an INPUT_DIRECTORY
-$;INPUT_EXTENSION$; = fsa
+$;INPUT_EXTENSION$; = ebwt
 
 [output]
 ;;use a unique sample name
 $;OUTPUT_TOKEN$; = default
 $;OUTPUT_DIRECTORY$; = $;REPOSITORY_ROOT$;/output_repository/$;COMPONENT_NAME$;/$;PIPELINEID$;_$;OUTPUT_TOKEN$;
-$;BSML_OUTPUT_LIST$; = $;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.bsml.list
-$;SAM_OUTPUT$; = $;OUTPUT_DIRECTORY$;/aligned.sam
+$;SAM_OUTPUT_LIST$; = $;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.sam.list
 
 [component]
 $;COMPONENT_NAME$; = bowtie
