@@ -19,21 +19,27 @@
             <executable>mkdir</executable>
             <arg>-p -m 777 $;TMP_DIR$;</arg>
         </command>
-
+        <!--Processing-->
+        <!--Iterator-->
+        <INCLUDE file="$;DOCS_DIR$;/file_iterator_template.xml" keys="$;ITERATOR_NAME$;=ITERATOR1,$;ITERATOR_XML$;=ITERATOR1_XML">
+        <!--Postprocessing-->
         <command>
-            <type>RunDistributedCommand</type>
-            <name>Bowtie align</name>
+            <type>RunUnixCommand</type>
+            <name>create sam list</name>
             <state>incomplete</state>
-            <executable>$;BIN_DIR$;/bowtie.pl</executable>            
-            <param>
-            <key>stdout</key>
-            <value>$;OUTPUT_DIRECTORY$;/align.stdout</value>
+            <executable>$;BIN_DIR$;/create_list_file</executable>
+            <param>  
+                <key>--directory</key>
+                <value>$;OUTPUT_DIRECTORY$;</value>
             </param>
-            <param>
-            <key>stderr</key>
-            <value>$;OUTPUT_DIRECTORY$;/align.stderr</value>
+            <param>  
+                <key>--regex</key>
+                <value>".*\.sam"</value>
             </param>
-            <arg>--bowtie_exec=$;BOWTIE_EXEC$; --reference=$;REFERENCE$; --reads=$;Q$;,$;Q2$; --sam_output=$;SAM_OUTPUT$; --max_insert=$;X$; --max_mismatches=$;V$; --max_aligns=$;M$; --more_options=$;OTHER_OPTS$;</arg>
+            <param>  
+                <key>--output_list</key>
+                <value>$;SAM_OUTPUT_LIST$;</value>
+            </param>
         </command>
     </commandSet>
 </commandSetRoot>
