@@ -2,12 +2,8 @@
 classification = alignment
 
 [parameters]
-
-;;location of the reference FASTA
-$;REFERENCE$;=
-
 ;;additional build arguments
-$;OTHER_BUILD_ARGS$;=
+$;BUILD_ARGS$;=
 
 [input]
 $;INPUT_FILE_LIST$; = 
@@ -20,7 +16,7 @@ $;INPUT_EXTENSION$; = fsa
 ;;use a unique sample name
 $;OUTPUT_TOKEN$; = default
 $;OUTPUT_DIRECTORY$; = $;REPOSITORY_ROOT$;/output_repository/$;COMPONENT_NAME$;/$;PIPELINEID$;_$;OUTPUT_TOKEN$;
-$;BSML_OUTPUT_LIST$; = $;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.bsml.list
+$;INDEX_OUTPUT_LIST$; = $;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.idx.list
 
 [component]
 $;COMPONENT_NAME$; = bowtie_build
