@@ -19,22 +19,27 @@
             <executable>mkdir</executable>
             <arg>-p -m 777 $;TMP_DIR$;</arg>
         </command>
-
+        <!--Processing-->
+        <!--Iterator-->
+        <INCLUDE file="$;DOCS_DIR$;/file_iterator_template.xml" keys="$;ITERATOR_NAME$;=ITERATOR1,$;ITERATOR_XML$;=ITERATOR1_XML">
+        <!--Postprocessing-->
         <command>
             <type>RunUnixCommand</type>
-            <name>Bowtie build index</name>
+            <name>create bowtie index list</name>
             <state>incomplete</state>
-            <executable>$;BOWTIE_BUILD_EXEC$;</executable>            
-            <param>
-            <key>stdout</key>
-            <value>$;OUTPUT_DIRECTORY$;/build.stdout</value>
+            <executable>$;BIN_DIR$;/create_list_file</executable>
+            <param>  
+                <key>--directory</key>
+                <value>$;OUTPUT_DIRECTORY$;</value>
             </param>
-            <param>
-            <key>stderr</key>
-            <value>$;OUTPUT_DIRECTORY$;/build.stderr</value>
+            <param>  
+                <key>--regex</key>
+                <value>".*\.idx"</value>
             </param>
-            <arg>$;OTHER_BUILD_ARGS$; -f $;REFERENCE$; $;OUTPUT_DIRECTORY$;/reference</arg>
+            <param>  
+                <key>--output_list</key>
+                <value>$;INDEX_OUTPUT_LIST$;</value>
+            </param>
         </command>
-
     </commandSet>
 </commandSetRoot>
